data/all_generated_tests/raw_wast_tests/br_if_ImproperFunctionCallorReturnHandling_1828.wast
;; 9. Create a `br_if` in an indirect function call that branches to a `loop` entry point. Test if the wizard_engine accurately tracks and fetches the correct label arguments and manages the stack to allow the `loop` parameters to be set correctly.

(assert_invalid
  (module
    (func $type-br_if-loop
      (block
        (i32.const 1)
        (i32.const 42)
        (loop (param i32)
          (br_if 0 (i32.const 1))
        )
      )
    )
  )
  "type mismatch"
)